Updated localization information
...including Indonesian.
https://github.com/bibledit/cloud/issues/499

--- a/locale/fr.po
+++ b/locale/fr.po
@@ -7,13 +7,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bibledit\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"PO-Revision-Date: 2019-09-06 16:31+0000\n"
-"Last-Translator: L'Africain <Unknown>\n"
+"PO-Revision-Date: 2020-07-20 21:03+0000\n"
+"Last-Translator: Jean-Marc <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Launchpad (build 19044)\n"
+"X-Generator: Launchpad (build 4809fcb62f445aaa3ae919f7f6c3cc7d156ea57a)\n"
 
 msgid "Has been sending and receiving during the past hour"
 msgstr "A fait l'envoi et la réception au cours de la dernière heure"
@@ -188,7 +188,7 @@ msgid "Pushing changes to the repository failed."
 msgstr "Les modifications apportées au dépôt ont échoué."
 
 msgid "Cleaning"
-msgstr "Nettoyage en cours"
+msgstr "Nettoyage"
 
 msgid "The temporal file was removed from the data successfully."
 msgstr "Le fichier temporaire a été supprimé des données avec succès."
@@ -482,7 +482,7 @@ msgid "Will save..."
 msgstr "Va sauvegarder…"
 
 msgid "Saving..."
-msgstr "Enregistrement en cours..."
+msgstr "Enregistrement..."
 
 msgid "Saved"
 msgstr "Enregistré"
@@ -495,6 +495,15 @@ msgstr "Reformater"
 
 msgid "You do not have enough privileges to modify this book."
 msgstr "Vous n'avez pas assez de privilèges pour modifier ce livre."
+
+msgid "Updated Bible text was loaded."
+msgstr ""
+
+msgid "Press Enter to continue."
+msgstr ""
+
+msgid "Please check the updated text."
+msgstr ""
 
 msgid "space"
 msgstr "espace"
@@ -529,10 +538,12 @@ msgstr ""
 "Il y a déjà quelque temps que les changements dans le texte biblique ont été "
 "récupérés du Nuage."
 
-msgid "Please do a Send/receive action to receive them from the Cloud."
+msgid ""
+"This will right itself in a little time if you are connected to the Internet."
 msgstr ""
-"Veuillez effectuer une action Envoyer/recevoir pour les recevoir à partir du "
-"Nuage."
+
+msgid "If not please do a Send/receive action."
+msgstr ""
 
 msgid ""
 "There are pending changes in the Bible text that have not yet been sent to "
@@ -540,13 +551,6 @@ msgid ""
 msgstr ""
 "Il y a des changements dans le texte de la Bible qui n'ont pas été envoyés "
 "sur le nuage depuis un certain temps."
-
-msgid ""
-"Changes will continue to be saved, but it is recommended to do a "
-"Send/receive action as soon as you can."
-msgstr ""
-"Les modifications seront encore sauvegardées, mais il est recommandé "
-"d'exécuter l'action Envoyer/recevoir aussi rapidement que possible."
 
 msgid "The Cloud already had some changes in this chapter."
 msgstr "Le nuage a déjà quelques modifications dans ce chapitre."
@@ -590,6 +594,24 @@ msgstr ""
 msgid "You may want to check whether this is correct."
 msgstr "Vous voudrez peut-être vérifier si cela est correct."
 
+msgid "Check whether Bible text was saved"
+msgstr ""
+
+msgid "Bibledit saved the Bible text below."
+msgstr ""
+
+msgid "But it found that other Bible text was saved to the same chapter."
+msgstr ""
+
+msgid "This may have been done by you or by someone else."
+msgstr ""
+
+msgid "You may want to check whether the Bible text was saved correctly."
+msgstr ""
+
+msgid "Bible"
+msgstr "Bible"
+
 msgid "Please enter a name for the new empty Bible"
 msgstr "Veuillez entrer un nom pour la nouvelle Bible"
 
@@ -629,9 +651,6 @@ msgstr "Ce chapitre existe déjà"
 
 msgid "Order"
 msgstr "Ordre"
-
-msgid "Bible"
-msgstr "Bible"
 
 msgid "Would you like to change the versification system?"
 msgstr "Voulez-vous modifier le système de versification ?"
@@ -826,6 +845,9 @@ msgstr "balise d'ouverture répétitive"
 msgid "Closing marker does not match opening marker"
 msgstr "La balise de clôture ne correspond pas à celle d'ouverture"
 
+msgid "Embedded marker requires a plus sign"
+msgstr ""
+
 msgid "The book lacks the marker for the verbose book name:"
 msgstr "Le livre n'a pas la balise pour le nom du livre détaillé :"
 
@@ -960,6 +982,12 @@ msgstr "Toutes les Bibles"
 
 msgid "all of them"
 msgstr "Tous"
+
+msgid "Sort on verse"
+msgstr ""
+
+msgid "Sort on author"
+msgstr ""
 
 msgid "You have entered the changes below in a Bible editor."
 msgstr ""
@@ -1170,6 +1198,15 @@ msgstr "Copier Bibledit vers Paratext"
 
 msgid "Copy Paratext to Bibledit"
 msgstr "Copier Paratext vers Bibledit"
+
+msgid "Copy larger Bibledit chapter to smaller Paratext chapter"
+msgstr ""
+
+msgid "Chapter merged"
+msgstr ""
+
+msgid "Cannot merge chapter due to missing parent data"
+msgstr ""
 
 msgid "Paratext: Send/receive"
 msgstr "Paratext : Envoyer/recevoir"
@@ -1490,6 +1527,9 @@ msgstr "est la publication de la balise de chapitre"
 
 msgid "is a comment with an endmarker"
 msgstr "est un commentaire avec une balise de fin"
+
+msgid "is the published verse marker"
+msgstr ""
 
 msgid "is a main title"
 msgstr "est un titre principal"
@@ -1935,6 +1975,16 @@ msgstr "Importer un fichier avec des notes de consultation locales"
 msgid "Import a file with local Resources"
 msgstr "Importer un fichier avec des ressources locales"
 
+msgid "The font could not be deleted because it is in use"
+msgstr ""
+"La police n'a pas pu être supprimée car elle est en cours d'utilisation"
+
+msgid "The font has been uploaded."
+msgstr "La police a été téléchargée."
+
+msgid "Delete font"
+msgstr "Supprimer la police"
+
 msgid "New feedback"
 msgstr "Nouveau commentaire"
 
@@ -2030,11 +2080,6 @@ msgstr "Votre nouvelle note a été postée"
 
 msgid "no Bible"
 msgstr "pas de Bible"
-
-msgid "The following notes were upgraded to the newest storage format:"
-msgstr ""
-"Les notes suivantes ont été mises à niveau vers le format de stockage le "
-"plus récent :"
 
 msgid "Query about a change in the text"
 msgstr "Interroger à propos d'un changement dans texte"
@@ -2173,9 +2218,6 @@ msgstr "Développement"
 
 msgid "Export"
 msgstr "Exporter"
-
-msgid "Indexes and Fonts"
-msgstr "Index et Polices"
 
 msgid "Mail"
 msgstr "Courriel"
@@ -2721,8 +2763,8 @@ msgstr ""
 "Affiche le texte du verset actuel tout en créant une nouvelle note de "
 "consultation"
 
-msgid "Night mode"
-msgstr "Mode nuit"
+msgid "Disable the pop-up menu when text is selected"
+msgstr ""
 
 msgid "Send / Receive"
 msgstr "Envoyer / Recevoir"
@@ -3182,8 +3224,8 @@ msgstr ""
 "Corriger le nombre de chapitres et de versets dans les livres existants "
 "selon le système de versification"
 
-msgid "well-formed USFM"
-msgstr "USFM bien formé"
+msgid "well formed USFM"
+msgstr ""
 
 msgid "missing punctuation at the end of a verse"
 msgstr "manque de ponctuation à la fin du verset"
@@ -3834,11 +3876,9 @@ msgstr ""
 "consultation qui vous a été attribuée."
 
 msgid ""
-"Suppress receiving email from an updated consultation note in case the "
-"update was made by you."
+"Suppress receiving email from an updated consultation note if the update was "
+"made by you."
 msgstr ""
-"Supprimer la réception d'un courriel à partir d'une note de consultation "
-"mise à jour au cas où la mise à jour a été effectuée par vous."
 
 msgid ""
 "Receive daily mail with the number of consultation notes assigned to you."
@@ -4141,6 +4181,15 @@ msgstr "Sélectionner cette feuille de style."
 msgid "Delete the entire stylesheet."
 msgstr "Supprimer toute la feuille de style."
 
+msgid "You can copy or backup this stylesheet."
+msgstr ""
+
+msgid "The stylesheet is kept in one folder."
+msgstr ""
+
+msgid "The name of the folder is this:"
+msgstr ""
+
 msgid "Category"
 msgstr "Catégorie"
 
@@ -4338,6 +4387,46 @@ msgstr ""
 
 msgid "Import a Resources archive into this device."
 msgstr "Importer une archive de ressources dans ce périphérique."
+
+msgid "Indexing"
+msgstr "Indexation"
+
+msgid "Bibledit uses indexes for fast lookup."
+msgstr "Bibledit utilise des index pour une recherche rapide."
+
+msgid "Normally the indexes are refreshed automatically."
+msgstr "Normalement, les index sont actualisés automatiquement."
+
+msgid ""
+"When the Journal indicates unusual behaviour of an index, or errors, it "
+"needs to be recreated."
+msgstr ""
+"Lorsque le journal indique le comportement inhabituel d'un index, ou des "
+"erreurs, il doit être recréé."
+
+msgid "Recreate Bibles index."
+msgstr "Recréer l'index des Bibles."
+
+msgid "Recreate Consultation Notes index."
+msgstr "Recréer l'index des notes de consultation."
+
+msgid "Fonts"
+msgstr "Polices"
+
+msgid "The following fonts are available in Bibledit:"
+msgstr "Les polices suivantes sont disponibles dans Bibledit :"
+
+msgid "You can add or remove fonts in Bibledit Cloud:"
+msgstr "Vous pouvez ajouter ou supprimer des polices dans Bibledit Cloud :"
+
+msgid "You can upload a new font."
+msgstr "Vous pouvez téléverser une nouvelle police."
+
+msgid "Cache"
+msgstr ""
+
+msgid "Clear the web cache and the resources cache."
+msgstr ""
 
 msgid "Create new"
 msgstr "Créer un nouveau"
@@ -4685,40 +4774,6 @@ msgstr ""
 msgid "Enable JavaScript to work with Bibledit"
 msgstr "Activer JavaScript pour travailler avec Bibledit"
 
-msgid "Indexing"
-msgstr "Indexation"
-
-msgid "Bibledit uses indexes for fast lookup."
-msgstr "Bibledit utilise des index pour une recherche rapide."
-
-msgid "Normally the indexes are refreshed automatically."
-msgstr "Normalement, les index sont actualisés automatiquement."
-
-msgid ""
-"When the Journal indicates unusual behaviour of an index, or errors, it "
-"needs to be recreated."
-msgstr ""
-"Lorsque le journal indique le comportement inhabituel d'un index, ou des "
-"erreurs, il doit être recréé."
-
-msgid "Recreate Bibles index."
-msgstr "Recréer l'index des Bibles."
-
-msgid "Recreate Consultation Notes index."
-msgstr "Recréer l'index des notes de consultation."
-
-msgid "Fonts"
-msgstr "Polices"
-
-msgid "The following fonts are available in Bibledit:"
-msgstr "Les polices suivantes sont disponibles dans Bibledit :"
-
-msgid "You can add or remove fonts in Bibledit Cloud:"
-msgstr "Vous pouvez ajouter ou supprimer des polices dans Bibledit Cloud :"
-
-msgid "You can upload a new font."
-msgstr "Vous pouvez téléverser une nouvelle police."
-
 msgid "Hyphenation"
 msgstr "Césure"
 
@@ -4847,6 +4902,9 @@ msgstr "Exporter durant la nuit."
 msgid "Export now."
 msgstr "Exporter maintenant."
 
+msgid "Email address for a feedback link:"
+msgstr ""
+
 msgid "Html"
 msgstr "Html"
 
@@ -4927,9 +4985,6 @@ msgstr ""
 "L'aide dans Online Bible fournit plus d'informations sur la création d'un "
 "module."
 
-msgid "Quick Bible"
-msgstr "Quick Bible"
-
 msgid "The exports use the following stylesheet:"
 msgstr "L'exportation utilise la feuille de style suivante :"
 
@@ -4945,6 +5000,9 @@ msgstr "Soumettez la Bible à Bible Drop Box maintenant."
 
 msgid "Visit the Bible Drop Box for more options."
 msgstr "Visitez Bible Drop Box pour plus d'options."
+
+msgid "There are more export formats through the BibleMultiConverter."
+msgstr ""
 
 msgid "Username"
 msgstr "Identifiant"
@@ -5404,8 +5462,8 @@ msgstr "Connexion au nuage Bibledit"
 msgid "Connected to Bibledit Cloud."
 msgstr "Connecté au nuage Bibledit."
 
-msgid "Disconnect and log out."
-msgstr "Deconnexion et quitter."
+msgid "Connection information."
+msgstr ""
 
 msgid "Internet address"
 msgstr "Adresse internet"
@@ -5434,6 +5492,24 @@ msgstr "Sinon, connectez-vous à la démo de Bibledit Cloud."
 
 msgid "To get access to Bibledit Cloud, install a server instance."
 msgstr "Pour accéder à Bibledit Cloud, installez une instance de serveur."
+
+msgid ""
+"Bibledit is not like some programs that can work faster if you log out and "
+"log back in."
+msgstr ""
+
+msgid ""
+"If you log out, then any verses you drafted or changed will not be sent to "
+"the Cloud."
+msgstr ""
+
+msgid ""
+"Bibledit has been designed so that the user never has to log out under "
+"normal circumstances."
+msgstr ""
+
+msgid "I understand it and want to disconnect from the Cloud."
+msgstr ""
 
 msgid "This page deals with setting up the email system."
 msgstr ""
@@ -6850,6 +6926,11 @@ msgstr ""
 "et choisissez Styles de paragraphe dans la palette. Cliquez avec le bouton "
 "droit sur le style souhaité et choisissez Modifier."
 
+msgid ""
+"Section headings look better after ticking ‘Balance ragged lines’ in the "
+"paragraph options."
+msgstr ""
+
 msgid "Running headers"
 msgstr "En-têtes en cours"
 
@@ -7007,8 +7088,14 @@ msgstr "Suivez les étapes ci-dessous pour installer Bibledit."
 msgid "Open a terminal."
 msgstr "Ouvrez un terminal."
 
+msgid "On older versions of Ubuntu, or to get updated Bibledit software:"
+msgstr ""
+
 msgid "Add the Bibledit repository:"
 msgstr "Ajoutez le dépôt Bibledit :"
+
+msgid "As of Ubuntu 18.04, the above is no longer needed."
+msgstr ""
 
 msgid "Read the repository:"
 msgstr "Mettez à jour la liste des paquets du dépôt :"
@@ -7018,6 +7105,9 @@ msgstr "Installez Bibledit :"
 
 msgid "Bibledit can be started from the menu."
 msgstr "Bibledit peut être démarré depuis le menu."
+
+msgid "More information:"
+msgstr ""
 
 msgid "The Notes are an important part of Consultations."
 msgstr "Les notes constituent une partie importante des consultations."
@@ -7340,8 +7430,8 @@ msgstr "Référence externe"
 msgid "Bibledit software"
 msgstr "Logiciel Bibledit"
 
-msgid "Copyright (©) 2003-2017 Teus Benschop."
-msgstr "Droits d'auteur  (©) 2003-2017 Teus Benschop."
+msgid "Copyright (©) 2003-2019 Teus Benschop."
+msgstr ""
 
 msgid ""
 "This program is free software: you can redistribute it and/or modify it "
@@ -8785,11 +8875,9 @@ msgstr ""
 "composition."
 
 msgid ""
-"Some of the word in the OpenDocument files are long. This results in too "
+"Some of the words in the OpenDocument files are long. This results in too "
 "much space between some words."
 msgstr ""
-"Certains des mots dans les fichiers OpenDocument sont longs. Il en résulte "
-"trop d'espace entre certains mots."
 
 msgid ""
 "The words need to get hyphens so that part of the word goes on the next line."
@@ -8805,10 +8893,8 @@ msgstr ""
 "nombreuses langues. Cela résoudrait le problème."
 
 msgid ""
-"But the programs do not have a hyphenation algorithms for all languages."
+"But the programs do not have hyphenation algorithms for all languages."
 msgstr ""
-"Mais les programmes ne disposent pas d'algorithmes de césure pour toutes les "
-"langues."
 
 msgid "Bibledit has a hyphenater that could assist."
 msgstr "Bibledit a un script de césure qui pourrait aider."
@@ -9362,6 +9448,9 @@ msgstr ""
 msgid "Avoid hyphenations in the headings."
 msgstr "Évitez les césures dans les titres."
 
+msgid "It is helpful to remove all discretionary hyphens from the headings."
+msgstr ""
+
 msgid ""
 "Many book titles consist of a main title and a subtitle, like 'The gospel of "
 "Matthew'."
@@ -9451,11 +9540,9 @@ msgstr ""
 "apparaître isolés à la fin d'un paragraphe."
 
 msgid ""
-"This result in less much white space between paragraphs or at the bottom of "
+"This results in less much white space between paragraphs or at the bottom of "
 "a page."
 msgstr ""
-"Il en résulte moins d'espace blanc entre les paragraphes ou au bas d'une "
-"page."
 
 msgid ""
 "The main page numbering starts at the first page of the text of the "
@@ -11888,8 +11975,8 @@ msgstr ""
 "Numéro de verset alternatif ou secondaire. Pour encoder la double "
 "numérotation dans les Psaumes."
 
-msgid "Publishing alternate verse"
-msgstr "Verset alternatif pour l'édition"
+msgid "Published verse marker"
+msgstr ""
 
 msgid ""
 "Published verse marker. This is a verse marking that would be used in the "
@@ -12432,6 +12519,15 @@ msgstr "L'exportation a été effacée"
 msgid "The Bible is being exported to Web format."
 msgstr "La Bible va être exportée au format Web."
 
+msgid "The email address for the feedback link was removed."
+msgstr ""
+
+msgid "The email address for the feedback link was saved."
+msgstr ""
+
+msgid "The email address is not valid."
+msgstr ""
+
 msgid "The Bible is being exported to Html format."
 msgstr "La Bible vaêtre exportée au format Html."
 
@@ -12484,9 +12580,6 @@ msgstr "La Bible va être exportée au format e-Sword."
 msgid "The Bible is being exported to Online Bible format."
 msgstr "La Bible va être exportée au format Bible Online."
 
-msgid "The Bible is being exported to Quick Bible format."
-msgstr "La Bible est en train d'être exportée au format  Quick Bible."
-
 msgid "Would you like to use another stylesheet for the exports?"
 msgstr ""
 "Voulez-vous utiliser une autre feuille de style pour les exportations ?"
@@ -12502,16 +12595,6 @@ msgstr "Vous recevrez un e-mail avec plus de détails."
 
 msgid "Go to Bibledit Cloud to submit the Bible there."
 msgstr "Allez sur Bibledit Cloud pour y soumettre la Bible."
-
-msgid "The font could not be deleted because it is in use"
-msgstr ""
-"La police n'a pas pu être supprimée car elle est en cours d'utilisation"
-
-msgid "The font has been uploaded."
-msgstr "La police a été téléchargée."
-
-msgid "Delete font"
-msgstr "Supprimer la police"
 
 msgid "Number of chapters per book"
 msgstr "Nombre de chapitre par livre"
@@ -12624,9 +12707,6 @@ msgstr "Exporté en e-Sword"
 msgid "Exported to basic USFM and text"
 msgstr "Exporté en USFM basique et en texte"
 
-msgid "Exported to Quick Bible"
-msgstr "Exporté en Quick Bible"
-
 msgid "Submit to the Bible Drop Box"
 msgstr "Soumettre à Bible Drop Box"
 
@@ -12635,6 +12715,9 @@ msgstr "Traduction de la Bible par Bibledit"
 
 msgid "Go back to"
 msgstr "Précédent"
+
+msgid "Comment on"
+msgstr ""
 
 msgid "Exported to web"
 msgstr "Exporté sur le web"
