--- a/locale/bibledit.pot
+++ b/locale/bibledit.pot
@@ -274,6 +274,9 @@ msgstr ""
 msgid "Select which Bible to make the active one for editing"
 msgstr ""
 
+msgid "Which verse separator to use for notes entry?"
+msgstr ""
+
 msgid "Changes"
 msgstr ""
 
@@ -469,6 +472,12 @@ msgstr ""
 msgid "Will save..."
 msgstr ""
 
+msgid "Updating..."
+msgstr ""
+
+msgid "Updated"
+msgstr ""
+
 msgid "Saving..."
 msgstr ""
 
@@ -485,12 +494,6 @@ msgid "You do not have enough privileges to modify this book."
 msgstr ""
 
 msgid "Updated Bible text was loaded."
-msgstr ""
-
-msgid "Press Enter to continue."
-msgstr ""
-
-msgid "Please check the updated text."
 msgstr ""
 
 msgid "space"
@@ -577,16 +580,25 @@ msgstr ""
 msgid "Bibledit saved the Bible text below."
 msgstr ""
 
-msgid "But it found that other Bible text was saved to the same chapter."
-msgstr ""
-
-msgid "This may have been done by you or by someone else."
+msgid "But Bibledit is not entirely sure that all went well."
 msgstr ""
 
 msgid "You may want to check whether the Bible text was saved correctly."
 msgstr ""
 
+msgid "The text in bold was added."
+msgstr ""
+
+msgid "The text in strikethrough was removed."
+msgstr ""
+
 msgid "Bible"
+msgstr ""
+
+msgid "You edited:"
+msgstr ""
+
+msgid "Bibledit saved:"
 msgstr ""
 
 msgid "Please enter a name for the new empty Bible"
@@ -634,14 +646,6 @@ msgstr ""
 msgid ""
 "A versification system determines how many chapters are in each book, and "
 "how many verses are in each chapter. Please make your choice below."
-msgstr ""
-
-msgid "Would you like to change the verse mapping?"
-msgstr ""
-
-msgid ""
-"A verse mapping can be used to match verses for parallel Bible display. "
-"Please make your choice below."
 msgstr ""
 
 msgid "Create book"
@@ -1009,6 +1013,36 @@ msgstr ""
 msgid "mark for deletion"
 msgstr ""
 
+msgid "Don't know where to save"
+msgstr ""
+
+msgid "Checksum error"
+msgstr ""
+
+msgid "Nothing to save"
+msgstr ""
+
+msgid "Cannot save: Needs Unicode"
+msgstr ""
+
+msgid "No write access"
+msgstr ""
+
+msgid "Merging chapter."
+msgstr ""
+
+msgid "Don't know what to update"
+msgstr ""
+
+msgid "Cannot update: Needs Unicode"
+msgstr ""
+
+msgid "Edit verse"
+msgstr ""
+
+msgid "Select which Bible to open in the editor"
+msgstr ""
+
 msgid "Editor and Resources"
 msgstr ""
 
@@ -1078,16 +1112,16 @@ msgstr ""
 msgid "Workspace"
 msgstr ""
 
+msgid "Select which Bible to read"
+msgstr ""
+
 msgid "Bibledit"
 msgstr ""
 
 msgid "Recent changes in the Bible texts"
 msgstr ""
 
-msgid ""
-"Please confirm this request by replying to this email. There is a "
-"confirmation number in the subject line. Your reply should have this same "
-"confirmation number in the subject line."
+msgid "Please confirm this request by clicking this following link:"
 msgstr ""
 
 msgid "User account change"
@@ -1102,28 +1136,55 @@ msgstr ""
 msgid "The following email was sent to this user:"
 msgstr ""
 
-msgid "Back"
+msgid "The passage has been opened in the existing Bible editor"
 msgstr ""
 
-msgid "Forward"
+msgid "Open a Bible editor to edit the passage"
 msgstr ""
 
-msgid "Select book"
+msgid "Insufficient information"
+msgstr ""
+
+msgid "There was no text."
+msgstr ""
+
+msgid "Nothing was saved."
+msgstr ""
+
+msgid "The original text of the chapter was reloaded."
+msgstr ""
+
+msgid "Save failure"
+msgstr ""
+
+msgid "User tried to save something different from exactly one chapter."
+msgstr ""
+
+msgid "Incorrect chapter"
+msgstr ""
+
+msgid "Preview"
+msgstr ""
+
+msgid "A user tried to save something different from exactly one chapter"
+msgstr ""
+
+msgid "Edit"
 msgstr ""
 
 msgid "Select chapter"
 msgstr ""
 
-msgid "Go to previous verse"
+msgid "cancel"
+msgstr ""
+
+msgid "Select book"
 msgstr ""
 
 msgid "Select verse"
 msgstr ""
 
-msgid "Go to next verse"
-msgstr ""
-
-msgid "cancel"
+msgid "Enter passage to go to"
 msgstr ""
 
 msgid "Copying Bible from Bibledit to a Paratext project."
@@ -1186,28 +1247,16 @@ msgstr ""
 msgid "Merging and saving chapter."
 msgstr ""
 
-msgid "No write access"
-msgstr ""
-
 msgid "Passage mismatch"
 msgstr ""
 
 msgid "Needs Unicode"
 msgstr ""
 
-msgid "Nothing to save"
-msgstr ""
-
-msgid "Checksum error"
-msgstr ""
-
 msgid "Confusing data"
 msgstr ""
 
 msgid "Edit USFM"
-msgstr ""
-
-msgid "Select which Bible to open in the editor"
 msgstr ""
 
 msgid "Search the Bible"
@@ -1293,42 +1342,6 @@ msgid "Here are the various options:"
 msgstr ""
 
 msgid "Please pick one."
-msgstr ""
-
-msgid "The passage has been opened in the existing Bible editor"
-msgstr ""
-
-msgid "Open a Bible editor to edit the passage"
-msgstr ""
-
-msgid "Insufficient information"
-msgstr ""
-
-msgid "There was no text."
-msgstr ""
-
-msgid "Nothing was saved."
-msgstr ""
-
-msgid "The original text of the chapter was reloaded."
-msgstr ""
-
-msgid "Save failure"
-msgstr ""
-
-msgid "User tried to save something different from exactly one chapter."
-msgstr ""
-
-msgid "Incorrect chapter"
-msgstr ""
-
-msgid "Merging chapter."
-msgstr ""
-
-msgid "Preview"
-msgstr ""
-
-msgid "Edit"
 msgstr ""
 
 msgid "Stylesheet"
@@ -1856,6 +1869,12 @@ msgstr ""
 msgid "System"
 msgstr ""
 
+msgid "Please enter a name for the Bible"
+msgstr ""
+
+msgid "The Bible was renamed"
+msgstr ""
+
 msgid "Please enter a timezone between -12 and +14"
 msgstr ""
 
@@ -2069,19 +2088,10 @@ msgstr ""
 msgid "unassign"
 msgstr ""
 
-msgid "Don't know where to save"
-msgstr ""
-
-msgid "Cannot save: Needs Unicode"
-msgstr ""
-
-msgid "Edit verse"
-msgstr ""
-
 msgid "Login"
 msgstr ""
 
-msgid "Translation"
+msgid "Read"
 msgstr ""
 
 msgid "User resources"
@@ -2199,6 +2209,12 @@ msgid "Verse editor"
 msgstr ""
 
 msgid "USFM editor"
+msgstr ""
+
+msgid "dot"
+msgstr ""
+
+msgid "colon"
 msgstr ""
 
 msgid "Bible bible does not exist: Cannot create book"
@@ -2432,6 +2448,9 @@ msgstr ""
 msgid "Password protected network repository"
 msgstr ""
 
+msgid "Personal access token protected network repository"
+msgstr ""
+
 msgid "Secured network repository"
 msgstr ""
 
@@ -2605,10 +2624,30 @@ msgstr ""
 msgid "The consultation notes show the note status"
 msgstr ""
 
+msgid "Show the status of the consultation notes in colour"
+msgstr ""
+
 msgid "Show the current verse text while creating a new consultation note"
 msgstr ""
 
 msgid "Disable the pop-up menu when text is selected"
+msgstr ""
+
+msgid "Verse separator for Bible notes entry"
+msgstr ""
+
+msgid "Receive focused verse reference from Paratext and Accordance"
+msgstr ""
+
+msgid ""
+"In Accordance, enable this in Preferences / General / Synchronize text with "
+"other applications."
+msgstr ""
+
+msgid "Receive focused verse reference from Accordance"
+msgstr ""
+
+msgid "Bibledit always sends the focused verse reference to Accordance."
 msgstr ""
 
 msgid "Send / Receive"
@@ -2896,9 +2935,6 @@ msgstr ""
 msgid "Versification system"
 msgstr ""
 
-msgid "Verse mapping"
-msgstr ""
-
 msgid "Import text"
 msgstr ""
 
@@ -3046,6 +3082,12 @@ msgid "no-break space at French punctuation"
 msgstr ""
 
 msgid "multiple « in French citation style"
+msgstr ""
+
+msgid "transpose and fix double spaces in footnotes and cross references"
+msgstr ""
+
+msgid "valid UTF-8 Unicode text"
 msgstr ""
 
 msgid "Settings for the sentence structure"
@@ -3262,6 +3304,12 @@ msgid "User"
 msgstr ""
 
 msgid "Number of changes"
+msgstr ""
+
+msgid "editor"
+msgstr ""
+
+msgid "preview"
 msgstr ""
 
 msgid "Create"
@@ -3523,11 +3571,8 @@ msgstr ""
 msgid "The collaboration is being set up."
 msgstr ""
 
-msgid "editor"
-msgstr ""
-
 msgid ""
-"Subscribe to a consultation note you created or edited online or by email."
+"Subscribe to a consultation note I created or edited online or by email."
 msgstr ""
 
 msgid ""
@@ -3536,62 +3581,62 @@ msgid ""
 msgstr ""
 
 msgid ""
-"Receive email confirmation of your posts to a consultation notes done by "
-"email."
+"Receive email confirmation of my posts to a consultation notes done by email."
 msgstr ""
 
-msgid ""
-"Receive email about changes in a consultation note you are subscribed to."
+msgid "Receive email about changes in a consultation note I am subscribed to."
 msgstr ""
 
-msgid "A consultation note that gets changed will be assigned to you."
+msgid "A consultation note that gets changed will be assigned to me."
 msgstr ""
 
-msgid "Receive email about changes in a consultation note assigned to you."
+msgid "Receive email about changes in a consultation note assigned to me."
 msgstr ""
 
 msgid ""
 "Suppress receiving email from an updated consultation note if the update was "
-"made by you."
+"made by me."
 msgstr ""
 
 msgid ""
-"Receive daily mail with the number of consultation notes assigned to you."
+"Receive daily mail with the number of consultation notes assigned to me."
 msgstr ""
 
 msgid ""
-"Receive daily mail with the number of consultation notes you are subscribed "
-"to."
+"Receive daily mail with the number of consultation notes I am subscribed to."
 msgstr ""
 
 msgid "Receive email about a deleted consultation note."
 msgstr ""
 
 msgid ""
-"Emails that would normally be sent right after you have created a "
-"consultation note, delay them till the evening."
+"Emails that would normally be sent right after I have created a consultation "
+"note, delay them till the evening."
 msgstr ""
 
 msgid "This setting may be useful in the following scenario:"
 msgstr ""
 
 msgid ""
-"Each time you create a new note, the other members of the team get "
-"interrupted by your email."
+"Each time I create a new note, the other members of the team get interrupted "
+"by my email."
 msgstr ""
 
 msgid "This happens many times a day."
 msgstr ""
 
 msgid ""
-"You don't want these interruptions, but the team members need to get your "
-"email eventually."
+"I don't want these interruptions, but the team members need to get my email "
+"eventually."
 msgstr ""
 
-msgid "Tick this setting, and you're done."
+msgid "Tick this setting, and I am done."
 msgstr ""
 
-msgid "Receive daily mail with the changes in the Bible made by you."
+msgid "Assign notes I create to these users:"
+msgstr ""
+
+msgid "Receive daily mail with the changes in the Bible made by me."
 msgstr ""
 
 msgid "Receive daily mail with the changes in the Bible made by anyone."
@@ -3599,22 +3644,22 @@ msgstr ""
 
 msgid ""
 "Notifications about changes in the Bible made by anyone will be generated "
-"for you online."
+"for me online."
 msgstr ""
 
 msgid ""
-"Notifications about changes in the Bible made by you will be generated for "
-"you online."
+"Notifications about changes in the Bible made by me will be generated for me "
+"online."
 msgstr ""
 
 msgid ""
 "Notifications about changes in the Bible made by the individual contributors "
-"will be generated for you online."
+"will be generated for me online."
 msgstr ""
 
 msgid ""
 "Receive daily mail with the number of online change notifications awaiting "
-"your attention."
+"my attention."
 msgstr ""
 
 msgid "Text Checks"
@@ -4040,6 +4085,18 @@ msgstr ""
 msgid "Clear the web cache and the resources cache."
 msgstr ""
 
+msgid "Queued emails"
+msgstr ""
+
+msgid "Number of emails still to be sent:"
+msgstr ""
+
+msgid "The name of the Bible is"
+msgstr ""
+
+msgid "Visit alkitabkita.info for more information."
+msgstr ""
+
 msgid "Create new"
 msgstr ""
 
@@ -4360,9 +4417,6 @@ msgstr ""
 msgid "Select the user to assign the note to"
 msgstr ""
 
-msgid "preview"
-msgstr ""
-
 msgid "Compare this Bible with any of the Bibles or USFM Resources below."
 msgstr ""
 
@@ -4655,6 +4709,20 @@ msgstr ""
 msgid "New Testament"
 msgstr ""
 
+msgid "Neural Machine Translation"
+msgstr ""
+
+msgid "The reference Bible translation:"
+msgstr ""
+
+msgid "The Bible being translated:"
+msgstr ""
+
+msgid ""
+"Export both Bibles and generate data for training a neural machine "
+"translation model."
+msgstr ""
+
 msgid "Resource categories"
 msgstr ""
 
@@ -4854,6 +4922,24 @@ msgstr ""
 msgid ""
 "When Bibledit has a certain passage focused, it can display the matching "
 "image."
+msgstr ""
+
+msgid "Rich Divider"
+msgstr ""
+
+msgid "Title"
+msgstr ""
+
+msgid "Link"
+msgstr ""
+
+msgid "Edit text colour"
+msgstr ""
+
+msgid "Edit background colour"
+msgstr ""
+
+msgid "Add it to the Resources"
 msgstr ""
 
 msgid "Resource Organizer"
@@ -5116,6 +5202,9 @@ msgstr ""
 msgid ""
 "If the SMTP server does not need authentication, just leave the fields for "
 "username and password empty."
+msgstr ""
+
+msgid "Any port other than 25 will use a secure connection."
 msgstr ""
 
 msgid ""
@@ -6466,7 +6555,7 @@ msgstr ""
 msgid "Bibledit software"
 msgstr ""
 
-msgid "Copyright (©) 2003-2019 Teus Benschop."
+msgid "Copyright (©) 2003-2021 Teus Benschop."
 msgstr ""
 
 msgid ""
@@ -6957,7 +7046,9 @@ msgstr ""
 msgid "Bibledit Cloud can also be installed from source."
 msgstr ""
 
-msgid "When the Navigator is displayed, it focuses the name of the Bible book."
+msgid ""
+"When the Navigator is displayed, enter the passage to focus through the "
+"keyboard."
 msgstr ""
 
 msgid "Escape"
@@ -8879,10 +8970,10 @@ msgstr ""
 msgid "Install the software Bibledit relies on:"
 msgstr ""
 
-msgid "Download Bibledit:"
+msgid "Download a recent version of Bibledit from"
 msgstr ""
 
-msgid "Unpack Bibledit in folder bibledit:"
+msgid "Unpack the downloaded Bibledit in folder bibledit:"
 msgstr ""
 
 msgid "Change to the directory:"
@@ -9023,11 +9114,7 @@ msgstr ""
 msgid "A verification email has been sent."
 msgstr ""
 
-msgid ""
-"After you reply to the verification email, your account will be activated."
-msgstr ""
-
-msgid "This may take five or more minutes."
+msgid "Follow the instructions in the email to activate your account."
 msgstr ""
 
 msgid "Switched user"
@@ -10807,6 +10894,22 @@ msgstr ""
 msgid "Go to Bibledit Cloud to submit the Bible there."
 msgstr ""
 
+msgid ""
+"Which Bible would you like to use as a reference for producing the neural "
+"machine translation suggestions?"
+msgstr ""
+
+msgid ""
+"Which Bible would you like to use as the one now being translated for "
+"getting the neural machine translation suggestions?"
+msgstr ""
+
+msgid "Exporting invalid UTF-8."
+msgstr ""
+
+msgid "Please check."
+msgstr ""
+
 msgid "Number of chapters per book"
 msgstr ""
 
@@ -11089,6 +11192,12 @@ msgstr ""
 msgid "Convert"
 msgstr ""
 
+msgid "Please enter the title for the divider"
+msgstr ""
+
+msgid "Please enter the link for the divider"
+msgstr ""
+
 msgid "Converting USFM Resource to Bible"
 msgstr ""
 
@@ -11321,7 +11430,10 @@ msgstr ""
 msgid "Account opened"
 msgstr ""
 
-msgid "Welcome! Your account is now active."
+msgid "Welcome!"
+msgstr ""
+
+msgid "Your account is now active and you have logged in."
 msgstr ""
 
 msgid "Username or email address or password are not correct"
