--- a/locale/bibledit.pot
+++ b/locale/bibledit.pot
@@ -2154,6 +2154,9 @@ msgstr ""
 msgid "User-defined"
 msgstr ""
 
+msgid "Comparative"
+msgstr ""
+
 msgid "Help and About"
 msgstr ""
 
@@ -4756,7 +4759,7 @@ msgstr ""
 msgid "StudyLight resources"
 msgstr ""
 
-msgid "Comparative Resource"
+msgid "Comparative resources"
 msgstr ""
 
 msgid "User-defined resources"
@@ -4782,6 +4785,18 @@ msgid ""
 msgstr ""
 
 msgid "It displays a web page based on the focused passage within Bibledit."
+msgstr ""
+
+msgid "Create a new empty comparative resource"
+msgstr ""
+
+msgid "A comparative resource takes two existing resources as input."
+msgstr ""
+
+msgid "It compares the two resources."
+msgstr ""
+
+msgid "It displays the differences between the two."
 msgstr ""
 
 msgid "Image"
@@ -4814,32 +4829,6 @@ msgid "Progress will be visible in the Journal."
 msgstr ""
 
 msgid "Refresh the list of resources from BibleGateway."
-msgstr ""
-
-msgid "Title"
-msgstr ""
-
-msgid "Base resource"
-msgstr ""
-
-msgid "Updated resource"
-msgstr ""
-
-msgid "Add it to the Resources"
-msgstr ""
-
-msgid "This resource will display the base resource as a starting point."
-msgstr ""
-
-msgid "It will compare the updated resource with the base resource."
-msgstr ""
-
-msgid ""
-"Any extra words that the updated resource has added as compared to the base "
-"resource will be shown in bold."
-msgstr ""
-
-msgid "Any words that were removed will be shown in strikethrough."
 msgstr ""
 
 msgid "The following resources are being installed:"
@@ -4904,6 +4893,78 @@ msgstr ""
 msgid "Start the conversion process and view it in the Journal."
 msgstr ""
 
+msgid "Comparative resource"
+msgstr ""
+
+msgid "Title"
+msgstr ""
+
+msgid "Base resource"
+msgstr ""
+
+msgid "Updated resource"
+msgstr ""
+
+msgid "This resource will take the base resource as a starting point."
+msgstr ""
+
+msgid "It will compare the updated resource with the base resource."
+msgstr ""
+
+msgid ""
+"Any words that the updated resource has added as compared to the base "
+"resource will be shown in bold."
+msgstr ""
+
+msgid "Any words that were removed will be shown in strikethrough."
+msgstr ""
+
+msgid "Characters to remove"
+msgstr ""
+
+msgid ""
+"Characters to be removed from the base and updated resources before doing "
+"the comparison."
+msgstr ""
+
+msgid "Separate the characters by spaces."
+msgstr ""
+
+msgid "Example"
+msgstr ""
+
+msgid "Characters to replace"
+msgstr ""
+
+msgid ""
+"Characters to search for and be replaced in the base and updated resources "
+"before doing the comparison."
+msgstr ""
+
+msgid "Separate the sets by spaces."
+msgstr ""
+
+msgid "First enter the characters to search for."
+msgstr ""
+
+msgid "Then enter the = sign."
+msgstr ""
+
+msgid "Finally enter the characters to be substituted."
+msgstr ""
+
+msgid "Remove diacritics from the resources before doing the comparison."
+msgstr ""
+
+msgid "Do case folding of the resources before doing the comparison."
+msgstr ""
+
+msgid "Resource is ready"
+msgstr ""
+
+msgid "Delete this resource"
+msgstr ""
+
 msgid "Refresh the list of resources from StudyLight."
 msgstr ""
 
@@ -4963,6 +5024,9 @@ msgid "Edit text colour"
 msgstr ""
 
 msgid "Edit background colour"
+msgstr ""
+
+msgid "Add it to the Resources"
 msgstr ""
 
 msgid "Resource Organizer"
@@ -11131,6 +11195,9 @@ msgstr ""
 msgid "Select a StudyLight resource"
 msgstr ""
 
+msgid "Select a Comparative resource"
+msgstr ""
+
 msgid "Converting Bible to USFM Resource"
 msgstr ""
 
@@ -11188,21 +11255,6 @@ msgstr ""
 msgid "to be updated"
 msgstr ""
 
-msgid "Please enter the title for the comparative resource"
-msgstr ""
-
-msgid "Select a resource to be used as a base resource."
-msgstr ""
-
-msgid "The base resource is used as a starting point for the comparison."
-msgstr ""
-
-msgid "Select a resource to be used as the updated resource."
-msgstr ""
-
-msgid "The updated resource will be compared with the base resource."
-msgstr ""
-
 msgid "Select a book"
 msgstr ""
 
@@ -11236,10 +11288,43 @@ msgstr ""
 msgid "Please enter the link for the divider"
 msgstr ""
 
+msgid "Please enter a name for the new comparative resource"
+msgstr ""
+
+msgid "This comparative resource already exists"
+msgstr ""
+
+msgid "Please give a name for the comparative resource"
+msgstr ""
+
+msgid "The comparative resource was created"
+msgstr ""
+
 msgid "Converting USFM Resource to Bible"
 msgstr ""
 
 msgid "Conversion completed"
+msgstr ""
+
+msgid "Select a resource to be used as a base resource."
+msgstr ""
+
+msgid "The base resource is used as a starting point for the comparison."
+msgstr ""
+
+msgid "Select a resource to be used as the updated resource."
+msgstr ""
+
+msgid "The updated resource will be compared with the base resource."
+msgstr ""
+
+msgid "Enter or edit the characters to remove from the resources"
+msgstr ""
+
+msgid "Enter or edit the search and replace sets"
+msgstr ""
+
+msgid "Could not save"
 msgstr ""
 
 msgid "Unknown starting book."
