--- a/locale/fr.po
+++ b/locale/fr.po
@@ -13,7 +13,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Launchpad (build 7100fef41f9a5d5fd53de99e6c59312f81a744cf)\n"
+"X-Generator: Launchpad (build d4fcb062545ed29d3cd7773e52e43615e042623f)\n"
 
 msgid "Has been sending and receiving during the past hour"
 msgstr "A fait l'envoi et la réception au cours de la dernière heure"
@@ -5172,6 +5172,9 @@ msgstr "Ressources de BibleGateway"
 msgid "StudyLight resources"
 msgstr "Ressources StudyLight"
 
+msgid "Comparative Resource"
+msgstr ""
+
 msgid "User-defined resources"
 msgstr "Ressources définies par l'utilisateur"
 
@@ -5233,6 +5236,32 @@ msgstr "La progression est visible dans le journal."
 
 msgid "Refresh the list of resources from BibleGateway."
 msgstr "Actualisez la liste des ressources de BibleGateway."
+
+msgid "Title"
+msgstr ""
+
+msgid "Base resource"
+msgstr ""
+
+msgid "Updated resource"
+msgstr ""
+
+msgid "Add it to the Resources"
+msgstr ""
+
+msgid "This resource will display the base resource as a starting point."
+msgstr ""
+
+msgid "It will compare the updated resource with the base resource."
+msgstr ""
+
+msgid ""
+"Any extra words that the updated resource has added as compared to the base "
+"resource will be shown in bold."
+msgstr ""
+
+msgid "Any words that were removed will be shown in strikethrough."
+msgstr ""
 
 msgid "The following resources are being installed:"
 msgstr "Les ressources suivantes sont en cours d'installation :"
@@ -5371,9 +5400,6 @@ msgstr ""
 msgid "Rich Divider"
 msgstr ""
 
-msgid "Title"
-msgstr ""
-
 msgid "Link"
 msgstr ""
 
@@ -5381,9 +5407,6 @@ msgid "Edit text colour"
 msgstr ""
 
 msgid "Edit background colour"
-msgstr ""
-
-msgid "Add it to the Resources"
 msgstr ""
 
 msgid "Resource Organizer"
@@ -12918,6 +12941,21 @@ msgstr "installé"
 
 msgid "to be updated"
 msgstr "pour être mis à jour"
+
+msgid "Please enter the title for the comparative resource"
+msgstr ""
+
+msgid "Select a resource to be used as a base resource."
+msgstr ""
+
+msgid "The base resource is used as a starting point for the comparison."
+msgstr ""
+
+msgid "Select a resource to be used as the updated resource."
+msgstr ""
+
+msgid "The updated resource will be compared with the base resource."
+msgstr ""
 
 msgid "Select a book"
 msgstr "Sélectionner un livre"
